[MODORDERS-1372]. Use batch  endpoint to update items to reduce amount of calls during change Instance connection (#1231)
* [MODORDERS-1372]. Use batch  endpoint to update items to reduce amount of calls during change Instance connection

* [MODORDERS-1372]. Add unit tests

* [MODORDERS-1372]. Add more unit tests

* [MODORDERS-1372]. Change to a proper patching endpoint, update tests